@@ -1,3 +1,18 @@
-/bin/
-/src/dummy/
-/target/
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+src/dummy/
+target/
+/242
+/308
+/332
+/jsoup-1.11.3.jar
+/lmao
